vitis_hls.log
NOTE: Using modified tcl85t.dll from https://gitenterprise.xilinx.com/ACT/vitis_hls_tcl
INFO: [HLS 200-10] Running 'C:/Xilinx/Vitis_HLS/2023.1/bin/unwrapped/win64.o/vitis_hls.exe'
INFO: [HLS 200-10] For user 'james' on host 'james_condos' (Windows NT_amd64 version 6.2) on Tue Oct 28 13:22:54 +1100 2025
INFO: [HLS 200-10] In directory 'C:/Users/james/Documents/Hardware_Final_Project_Private_V2/golden'
Sourcing Tcl script 'C:/Users/james/Documents/Hardware_Final_Project_Private_V2/golden/srcnn_hls/solution1/csim.tcl'
INFO: [HLS 200-1510] Running: source C:/Users/james/Documents/Hardware_Final_Project_Private_V2/golden/srcnn_hls/solution1/csim.tcl
INFO: [HLS 200-1510] Running: open_project srcnn_hls 
INFO: [HLS 200-10] Opening project 'C:/Users/james/Documents/Hardware_Final_Project_Private_V2/golden/srcnn_hls'.
INFO: [HLS 200-1510] Running: set_top srcnn 
INFO: [HLS 200-1510] Running: add_files src/conv1.cpp 
INFO: [HLS 200-10] Adding design file 'src/conv1.cpp' to the project
INFO: [HLS 200-1510] Running: add_files src/conv1_tile.cpp 
INFO: [HLS 200-10] Adding design file 'src/conv1_tile.cpp' to the project
INFO: [HLS 200-1510] Running: add_files src/conv2.cpp 
INFO: [HLS 200-10] Adding design file 'src/conv2.cpp' to the project
INFO: [HLS 200-1510] Running: add_files src/conv3.cpp 
INFO: [HLS 200-10] Adding design file 'src/conv3.cpp' to the project
INFO: [HLS 200-1510] Running: add_files src/srcnn.cpp 
INFO: [HLS 200-10] Adding design file 'src/srcnn.cpp' to the project
INFO: [HLS 200-1510] Running: add_files src/srcnn.h 
INFO: [HLS 200-10] Adding design file 'src/srcnn.h' to the project
INFO: [HLS 200-1510] Running: add_files -tb test/set14 -cflags -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'test/set14' to the project
INFO: [HLS 200-1510] Running: add_files -tb test/set5 -cflags -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'test/set5' to the project
INFO: [HLS 200-1510] Running: add_files -tb src/weights -cflags -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'src/weights' to the project
INFO: [HLS 200-1510] Running: add_files -tb test/util.cpp -cflags -Isrc -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'test/util.cpp' to the project
INFO: [HLS 200-1510] Running: add_files -tb test/util.h -cflags -Isrc -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'test/util.h' to the project
INFO: [HLS 200-1510] Running: add_files -tb test/tb_set14.cpp -cflags -Isrc -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'test/tb_set14.cpp' to the project
INFO: [HLS 200-1510] Running: add_files -tb test/tb_conv1.cpp -cflags -Isrc -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'test/tb_conv1.cpp' to the project
INFO: [HLS 200-1510] Running: add_files -tb test/tb_srcnn.cpp -cflags -Isrc -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'test/tb_srcnn.cpp' to the project
INFO: [HLS 200-1510] Running: add_files -tb test/csim.cpp -cflags -Isrc -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'test/csim.cpp' to the project
INFO: [HLS 200-1510] Running: open_solution solution1 -flow_target vivado 
INFO: [HLS 200-10] Opening solution 'C:/Users/james/Documents/Hardware_Final_Project_Private_V2/golden/srcnn_hls/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1611] Setting target device to 'xck26-sfvc784-2LV-c'
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see www.xilinx.com/cgi-bin/docs/rdoc?v=2023.1;t=hls+guidance;d=200-1505.html
INFO: [HLS 200-1510] Running: set_part xck26-sfvc784-2LV-c 
INFO: [HLS 200-1510] Running: create_clock -period 10 -name default 
INFO: [HLS 200-1510] Running: csim_design -quiet 
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch GCC as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../test/util.cpp in debug mode
   Compiling ../../../../test/tb_set14.cpp in debug mode
   Compiling ../../../../test/tb_conv1.cpp in debug mode
   Compiling ../../../../test/tb_srcnn.cpp in debug mode
   Compiling ../../../../src/conv1.cpp in debug mode
   Compiling ../../../../src/conv1_tile.cpp in debug mode
   Compiling ../../../../src/conv2.cpp in debug mode
   Compiling ../../../../src/conv3.cpp in debug mode
   Compiling ../../../../src/srcnn.cpp in debug mode
csim.mk:132: recipe for target 'obj/srcnn.o' failed
../../../../src/srcnn.cpp: In function 'void srcnn(ftmap_t (*)[255][255], param_t (*)[1][9][9], param_t*, param_t (*)[64][1][1], param_t*, param_t (*)[32][5][5], param_t*, ftmap_t (*)[255][255])':
../../../../src/srcnn.cpp:29:83: error: invalid initialization of reference of type 'hls::stream<float>&' from expression of type 'ftmap_t [64][17][17] {aka float [64][17][17]}'
             conv1_tile(input_tile, conv1_weights, conv1_biases, layer1_output_tile);
                                                                                   ^
In file included from ../../../../src/srcnn.cpp:1:0:
../../../../src/srcnn.h:46:6: note: in passing argument 4 of 'void conv1_tile(ftmap_t (*)[17][17], param_t (*)[1][9][9], param_t*, hls::stream<float>&)'
 void conv1_tile(ftmap_t input_tile[N0][TILE_H][TILE_W],
      ^~~~~~~~~~
../../../../src/srcnn.cpp:30:86: error: invalid initialization of reference of type 'hls::stream<float>&' from expression of type 'ftmap_t [64][17][17] {aka float [64][17][17]}'
             conv2(layer1_output_tile, conv2_weights, conv2_biases, layer2_output_tile);
                                                                                      ^
In file included from ../../../../src/srcnn.cpp:1:0:
../../../../src/srcnn.h:52:6: note: in passing argument 1 of 'void conv2(hls::stream<float>&, param_t (*)[64][1][1], param_t*, hls::stream<float>&)'
 void conv2(hls::stream<ftmap_t> &conv1_to_conv2,
      ^~~~~
../../../../src/srcnn.cpp:31:86: error: invalid initialization of reference of type 'hls::stream<float>&' from expression of type 'ftmap_t [32][17][17] {aka float [32][17][17]}'
             conv3(layer2_output_tile, conv3_weights, conv3_biases, layer3_output_tile);
                                                                                      ^
In file included from ../../../../src/srcnn.cpp:1:0:
../../../../src/srcnn.h:58:6: note: in passing argument 1 of 'void conv3(hls::stream<float>&, param_t (*)[32][5][5], param_t*, ftmap_t (*)[17][17])'
 void conv3(hls::stream<ftmap_t> &conv2_to_conv3,
      ^~~~~
make: *** [obj/srcnn.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
INFO: [HLS 200-111] Finished Command csim_design CPU user time: 0 seconds. CPU system time: 0 seconds. Elapsed time: 4.01 seconds; current allocated memory: 0.605 MB.
4
    while executing
"source C:/Users/james/Documents/Hardware_Final_Project_Private_V2/golden/srcnn_hls/solution1/csim.tcl"
    invoked from within
"hls::main C:/Users/james/Documents/Hardware_Final_Project_Private_V2/golden/srcnn_hls/solution1/csim.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$newargs"
    (procedure "hls_proc" line 16)
    invoked from within
"hls_proc [info nameofexecutable] $argv"
INFO: [HLS 200-112] Total CPU user time: 3 seconds. Total CPU system time: 1 seconds. Total elapsed time: 7.635 seconds; peak allocated memory: 1.045 GB.
